# lacuna-falsification

./: .audit-patterns  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  SESSION_COORDINATION.md  STATUS.md  pyproject.toml
.devcontainer/: devcontainer.json
config/: datasets.json  law_proposals.json
data/: SHA256SUMS  brca_tumor_normal.csv  build_cptac3_ccrcc.py  build_cptac3_m_stage.py  build_gse40435_expanded.py  build_gse53757.py  build_immotion150.py  build_ipf_bal.py  build_tcga_brca.py  build_tcga_kirc.py  build_tcga_kirc_metastasis.py  build_tcga_kirc_stage.py  build_tcga_kirc_survival.py  build_tcga_luad.py  cptac3_ccrcc.csv  cptac3_ccrcc_NOTE.md  gse40435_expanded.csv  gse40435_kirc.csv  gse53757_ccrcc.csv  immotion150_ccrcc.csv  ipf_bal_gse93606.csv  kirc_metastasis.csv  kirc_stage.csv  kirc_survival.csv  kirc_tumor_normal.csv  luad_tumor_normal.csv
docs/: ARTIFACT_INDEX.md  CLAIM_LOCK.md  capability_overhang_measurements.md  capability_overhang_summary.md  clinical_utility.md  demo_walkthrough.md  failure_network_v3_appendix.md  headline_findings.md  judge_faq.md  judging_criteria_audit.md  loom_narration_final_90s.md  loom_narration_final_v3.md  loom_narration_verbatim.md  loom_recording_cheatsheet.md  loom_script.md  loom_visual_cue_map.md  managed_agents_evidence_card.md  managed_agents_verification.md  methodology.md  narrative_candidates_30.md  opus47_api_verification.md  public_data_provenance.md  pysr_setup.md  submission_description.md  submission_form_draft.md  survivor_narrative.md  why_opus_4_7.md
prompts/: final_explanation.md  (+2 more)
(+270 files in other folders)
